partman-auto (50) UNRELEASED; urgency=low

  [ Sven Luther ]
  * [powerpc] Added lvm auto-partitioning support to prep and ibm_chrp
    recipes.
  * [powerpc] Added chrp_pegasos, oldworld and apus recipes.
  * [powerpc] Fixed boot-prep -> prep renaming.
    boot-prep died in libparted on january 2005, well before the sarge release.

 -- Sven Luther <luther@debian.org>  Sat, 18 Feb 2006 20:49:30 +0000

partman-auto (49) unstable; urgency=low

  * Enable auto-lvm in partitioning schemes for Sparc.

  [ Updated translations ]
  * Hungarian (hu.po) by SZERVÑC Attila
  * Slovenian (sl.po) by Matej Kovačič

 -- Frans Pop <fjp@debian.org>  Mon, 13 Feb 2006 12:38:08 +0100

partman-auto (48) unstable; urgency=low

  * Make sure no .svn directories get included in the package.

 -- Frans Pop <fjp@debian.org>  Sat, 28 Jan 2006 17:16:38 +0100

partman-auto (47) unstable; urgency=low

  [ Updated translations ]
  * Bulgarian (bg.po) by Ognyan Kulev
  * Catalan (ca.po) by Jordi Mallach
  * Greek, Modern (1453-) (el.po) by Konstantinos Margaritis
  * Finnish (fi.po) by Tapio Lehtonen
  * Galician (gl.po) by Jacobo Tarrio
  * Hebrew (he.po) by Lior Kaplan
  * Hindi (hi.po) by Nishant Sharma
  * Indonesian (id.po) by Parlin Imanuel Toh
  * Lithuanian (lt.po) by Kęstutis Biliūnas
  * Latvian (lv.po) by Aigars Mahinovs
  * Malagasy (mg.po) by Jaonary Rabarisoa
  * Macedonian (mk.po) by Georgi Stanojevski
  * Dutch (nl.po) by Bart Cornelis
  * Punjabi (Gurmukhi) (pa_IN.po) by Amanpreet Singh Alam
  * Polish (pl.po) by Bartosz Fenski
  * Slovenian (sl.po) by Jure Cuhalev
  * Albanian (sq.po) by Elian Myftiu
  * Swedish (sv.po) by Daniel Nylander
  * Turkish (tr.po) by Recai Oktaş
  * Vietnamese (vi.po) by Clytie Siddall
  * Wolof (wo.po) by Mouhamadou Mamoune Mbacke

 -- Frans Pop <fjp@debian.org>  Tue, 24 Jan 2006 21:55:44 +0100

partman-auto (46) unstable; urgency=low

  [ Joey Hess ]
  * Renamed multi_user scheme to just "multi" as in multiple partitions.