@@ -7,7 +7,10 @@ partman-auto (50) UNRELEASED; urgency=low
   * [powerpc] Fixed boot-prep -> prep renaming.
     boot-prep died in libparted on january 2005, well before the sarge release.
 
- -- Sven Luther <luther@debian.org>  Sat, 18 Feb 2006 20:49:30 +0000
+  [ Frans Pop ]
+  * recipes.sh: make code to select a recipe directory into separate function.
+
+ -- Frans Pop <fjp@debian.org>  Tue, 28 Feb 2006 20:26:54 +0100
 
 partman-auto (49) unstable; urgency=low
 
